--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "dev": "node index.js"
     },
     "dependencies": {
+        "bcrypt": "^6.0.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
